view servlet